# oss-rs

./: .env-example  .gitignore  CONTRIBUTION.md  Cargo.toml  Changelog.md  README.md  build.rs  example_file.txt  rfc.md
.github/: publish.yml
.github/actions-rs/: grcov.yml
.github/workflows/: publish.yml
cliff/: client.toml  object-store.toml
crates/object_store/: Cargo.toml  README.md
crates/object_store/examples/: basic.rs
crates/object_store/src/: lib.rs  list.rs  multipart.rs  put_payload.rs
examples/: bucket.rs  buckets.rs  custom.rs  delete_file.rs  demo.rs  demo1.rs  file.rs  files.rs  head_object.rs  io_write.rs  object_custom.rs  object_stream.rs  objects.rs  parse_xml.rs  plugin.rs  put_demo1.txt  put_file.rs  stream.rs  sts.rs  test.rs
examples/demo1/: Cargo.toml
examples/demo1/src/: main.rs
oss_derive/: Cargo.toml  README.md
oss_derive/src/: array2query.rs  attr.rs  derive.rs  file.rs  gen_rc.rs  impl_object.rs  lib.rs  path_where.rs
oss_derive/tests/: array2query.rs  file.rs  file_async.rs  gen_rc_client.rs  gen_rc_clone.rs  gen_rc_eq.rs  gen_rc_fail.rs  run.rs
src/: auth.rs  bucket.rs  builder.rs  client.rs  config.rs  consts.rs  decode.rs  error.rs  errors.rs  file.rs  lib.rs  object.rs  plugin.rs  response.rs  sts.rs  tests.rs  tests_async.rs  tests_blocking.rs  traits.rs  types.rs
src/auth/: query.rs  test.rs
src/blocking/: bucket.rs  builder.rs  client.rs  mod.rs  object.rs
src/bucket/: test.rs
src/builder/: test.rs
src/decode/: test.rs
src/file/: test.rs
src/object/: body.rs  content.rs  parts_upload.rs  test.rs
src/object/content/: arc.rs  blocking.rs  mock.rs  test_suite.rs  test_suite_block.rs
src/tests/: auth.rs  bucket.rs  client.rs  env.rs  errors.rs  mod.rs  object.rs  plugin.rs  tests_async.rs  tests_blocking.rs  traits.rs
src/types/: core.rs  endpoint.rs  header.rs  object.rs  test.rs
src/types/object/: base.rs  test.rs
tests/: buckets.xml  integration_test.rs  query_auth.rs
