[package]
name = "aliyun-oss-client"
version = "0.1.0"
edition = "2021"
description = "an aliyun oss client"
keywords = ["aliyun", "oss", "sdk"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hmac = {version = "^0.12"}
base64 = {version = "^0.22"}
chrono = {version = "^0.4"}
sha1 = {version = "^0.10"}
url= {version = "^2"}
reqwest = {version ="^0.12"}
thiserror = {version = "^1"}

[dev-dependencies]
dotenv = "0.15.0"
tokio = { version = "1.19.2", features = ["rt","macros","rt-multi-thread"] }