[package]
name = "aliyun-oss-client"
version = "0.13.0-alpha12"
edition = "2021"
resolver = "2"
description = "an aliyun oss client"
keywords = ["aliyun", "oss", "sdk"]
license = "MIT"
repository = "https://github.com/tu6ge/oss-rs"
documentation = "https://docs.rs/aliyun-oss-client"
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["tokio"]
tokio = ["dep:tokio","dep:tokio-util"]

[dependencies]
hmac = {version = "^0.12"}
base64 = {version = "^0.22"}
chrono = {version = "^0.4"}
sha1 = {version = "^0.10"}
url= {version = "^2"}
reqwest = {version ="^0.12",features = ["stream"]}
thiserror = {version = "^1"}
serde = {version = "1.0", features = ["derive"] }
serde-xml-rs = "0.6.0"
async-stream = "0.3"
futures-core = "0.3"
bytes = "1.11"
futures-util = "0.3"
async-trait = "0.1.89"

[dependencies.tokio]
version = "1.19.2"
optional = true
features = ["fs"]

[dependencies.tokio-util]
version = "0.7"
optional = true

[dev-dependencies]
dotenv = "0.15.0"
tokio = { version = "1.19.2", features = ["macros","rt"] }



