[package]
name = "oss_derive"
version.workspace = true
description = "aliyun-oss-client 's macro"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = {version = "1.0", features = ["full", "visit"]}
quote = "1.0"

[dependencies.proc-macro2]
version = "1.0"

[dev-dependencies]
trybuild = "1.0"
async-trait = "^0.1"
