[package]
name = "oss_derive"
version = "0.9.7"
description = "aliyun-oss-client 's macro"
edition.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[test]]
name = "run"
path = "tests/run.rs"

[features]
default = [
    #"blocking"
]
blocking=[]

[dependencies]
syn = {version = "1.0", features = ["full", "visit", "visit-mut"]}
quote = "1.0"

[dependencies.proc-macro2]
version = "1.0"

[dev-dependencies]
trybuild = {version ="1.0", features = ["diff"]}
async-trait = "^0.1"
