[package]
name = "aliyun-oss-client-opendal"
version = "0.0.1"
edition = "2021"
resolver = "2"
description = "OpenDAL adapter for aliyun-oss-client"

[dependencies]
aliyun-oss-client = { path = "../..", features = ["tokio"] }
object_store = "0.13"
bytes = "1"
futures-util = "0.3"
async-trait = "0.1"
