[package]
name = "aliyun-oss-object-store"
version = "0.0.1"
edition = "2021"
resolver = "2"
description = "Object store implementation for aliyun-oss-client"
license = "MIT"
repository = "https://github.com/tu6ge/oss-rs"
documentation = "https://docs.rs/aliyun-oss-object-store"
keywords = ["aliyun", "oss", "object_store"]
categories = ["api-bindings"]

[dependencies]
aliyun-oss-client = { path = "../..", features = ["tokio"] }
object_store = "0.13"
bytes = "1"
futures-util = "0.3"
async-trait = "0.1"
async-stream = "0.3"
serde = { version = "1", features = ["derive"] }
chrono = "0.4"
tokio = { version = "1", features = ["sync"] }
